@@ -20,6 +20,7 @@
 - added limited support for conditional variables dependent on other
   conditional variables based by Francesco Montorsi (previously, only
   dependency on options was possible)
+- added "debug" level to the <echo> command
 
 
 Version 0.2.2
